--- a/spring2023/index.html
+++ b/spring2023/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css" />
-<title>AIAA 5032 Foundations of Artificial Intelligence</title>
+<title>AIAA 5036 Autonomous AI</title>
 </head>
 
 <body>
 <table id="maintbl">
 <tr>
 <td width="80%">
-  <h1 align="left"> <br><b> Foundations of Artificial Intelligence</b> </h1>
-  <h2> AIAA 5032, Spring 2023 </h2>
+  <h1 align="left"> <br><b> Autonomous AI</b> </h1>
+  <h2> AIAA 5036, Spring 2023 </h2>
   <h2 align="left">Instructors: <a href="https://junweiliang.me/">Junwei Liang</a>
   </h2>
 </td>
@@ -40,9 +40,9 @@
 </td>
 <td align="justify">
 <br>
-<b>Date and Time: </b> 04:30PM - 05:50PM, Wednesday and Friday<br>
+<b>Date and Time: </b> 09:00AM - 11:50AM, Friday<br>
 <b>Location: </b> Rm 134, E1<br>
-<b>Websites: </b><a href="https://canvas.ust.hk/courses/50002">Canvas</a> <br>
+<b>Websites: </b><a href="https://canvas.ust.hk/courses/49913">Canvas</a> <br>
 </td>
 </tr>
 <tr>
@@ -55,7 +55,7 @@
 </td>
 <td align="justify">
 <br>
-This course aims to provide students with an overview of Artificial Intelligence principles and techniques. Key topics include machine learning, search, game theories, Markov decision process, constraint satisfaction problems, Bayesian networks, etc. Through this course, students will learn and practice the foundational principles, techniques and tools to tackle new AI problems.
+This course aims to provide students with key principles and algorithms to build modern autonomous AI systems. Key topics include machine perception, planning and decision-making algorithms. Through this course, students will learn and practice the foundational principles, techniques, and tools to build new autonomous AI systems.
 <br><br>
 </td>
 </tr>
