--- a/spring2023/lecs.html
+++ b/spring2023/lecs.html
@@ -3,15 +3,15 @@
 <head>
 <link rel="SHORTCUT ICON" href="ml-logo.gif">
 <link rel="stylesheet" href="style.css" />
-<title>AIAA 5032 Foundations of Artificial Intelligence</title>
+<title>AIAA 5036 Autonomous AI</title>
 </head>
 
 <body link="#0A356B">
 <table id="maintbl">
 <tr>
 <td width="80%">
-  <h1 align="left"> <br><b> Foundations of Artificial Intelligence</b> </h1>
-  <h2> AIAA 5032, Spring 2023 </h2>
+  <h1 align="left"> <br><b> Autonomous AI</b> </h1>
+  <h2> AIAA 5036, Spring 2023 </h2>
   <h2 align="left">Instructors: <a href="https://junweiliang.me/">Junwei Liang</a>
   </h2>
 </td>
@@ -40,7 +40,7 @@
 <!--Page content begins. Keep this line.-->
 <table id="maintbl">
   <tr><td>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQiON-9KtL1Uj9AiFe2FBCkm2gy7lyW6Y2aAsPWFjR8MBtWQ7FFrpy0dlc29Hbih3hPVsibKVmV2SG9/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="80%" height="800px"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS7H4J2o5SUXV8UkpM9JRZqnucXb9Ed8aeaVXqjDgQQqo0w2eaGocAZUvk4lsUTug1pdA9FA1YNwMJ5/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="90%" height="800px"></iframe>
 </td></tr>
 </table>
 <!--Page content ends. Keep this line.-->
