--- a/spring2023/index.html
+++ b/spring2023/index.html
@@ -28,7 +28,7 @@
 <td width="20%" align="center">
 <a href= "index.html"><b>Home</b></a></td>
 <td width="20%" align="center">
-<a href= "lecs.html"><b>Syllabus</b></a></td>
+<a href= "lecs.html"><b>Schedule</b></a></td>
 </tr>
 </table>
 </td>
@@ -64,7 +64,7 @@ This course aims to provide students with key principles and algorithms to build
 <b>Target Audience/ Prerequisites:</b>
 </td>
 <td align="justify">
-This is a graduate course primarily for graduate students. <br><br>
+This is a graduate course primarily for graduate students. Students should taken AIAA 5032 or equivalent AI principle courses. <br><br>
 </td>
 </tr>
 
@@ -82,12 +82,12 @@ This is a graduate course primarily for graduate students. <br><br>
         <td class="policy-header"><b>Score Assignment</b></td>
         <td class="policy-spacer">&nbsp;&nbsp;&nbsp;&nbsp;</td>
         <td>
-            Grading will be based on bi-weekly quizzes (20%), assignments (50%) and a course project
-            (25%). Note that 5% of your grade is assigned to attendance.
+            Grading will be based on bi-weekly reading assignments (50%) and a course project
+            (45%). Note that 5% of your grade is assigned to attendance.
         </td>
     </tr>
 
-
+    <!--
     <tr>
         <td class="policy-header"><b>Quizzes</b></td>
         <td class="policy-spacer">&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -107,6 +107,7 @@ This is a graduate course primarily for graduate students. <br><br>
             </ul>
         </td>
     </tr>
+
 
     <tr>
         <td class="policy-header"><b>Assignments</b></td>
@@ -139,6 +140,35 @@ This is a graduate course primarily for graduate students. <br><br>
             </ul>
         </td>
     </tr>
+    -->
+    <tr>
+        <td class="policy-header"><b>Reading Assignments</b></td>
+        <td class="policy-spacer"></td>
+        <td>
+
+            <ul>
+                <li> Reading assignments are designed to complement the lectures and showcase recent state-of-the-art research
+                </li>
+                <li>
+                  There are 6 reading assignments over the semester, where you will typically have one weeks' time to work on each.
+                </li>
+                <li>
+                    Most reading assignments will consist of 2 or 3 research papers. Each student is required to read only one research paper (out of the 2 or 3 assigned paper).
+                </li>
+                <li>
+                    The reading assignments consist of two main parts:
+                    (1) submission of discussion post summarizing the paper you read that week (a summary, strengths, weaknesses), and
+                    (2) participation in the follow-up discussions. One question post to other summary or one answer to the question.
+                </li>
+                <li>
+                    Each reading assignment is worth 10% credits: 8% for the paper summary and 2% for the extra posts in the discussion.
+                    We will keep your top 5 reading assignment scores.
+                </li>
+                <li> Assignments and project results are worth full credit on the due date. Unless granted an extension in advance, it is worth at most 75% credit for the next 48 hours, at most 50% credit after that. If you need an extension, please ask for it as soon as the need for it is known. Extensions that are requested promptly can be granted more liberally. You must turn in all assignments.
+                </li>
+            </ul>
+        </td>
+    </tr>
 
     <tr>
         <td class="policy-header"><b>Project</b></td>
@@ -146,7 +176,7 @@ This is a graduate course primarily for graduate students. <br><br>
         <td>
             <ul>
                 <li>
-                  The goal of the term project is to define and perform a small-scale experiment on your own, in order to gain hands-on experience which can then be scaled and generalized to other AI tasks.
+                  The goal of the course project is to define and perform a small-scale experiment on your own, in order to gain hands-on experience with robotic systems which can then be scaled and generalized to other robotic systems and tasks.
                 </li>
                 <li>
                   Can be done in groups, defined at the beginning.
@@ -154,9 +184,9 @@ This is a graduate course primarily for graduate students. <br><br>
                 <li>
                   Topic ideas will be provided, but you can suggest your own (if suitable)
                 </li>
-                <li>The project is worth 25% of your grade. These points are
-                    distributed as follows: 10% - Proposal Report (one-page); 40% - Project
-                    Presentation (midterm and final); 50% - Project report.
+                <li>The project is worth 45% of your grade. These points are
+                    distributed as follows: 10% - Proposal Report (one-page); 15% - Final Project
+                    Presentation and Demo; 20% - Project report.
                 </li>
                 <li>
                   May involve virtual machines, AWS, Colab and Kaggle.
@@ -166,6 +196,7 @@ This is a graduate course primarily for graduate students. <br><br>
     </tr>
     </tr>
 
+    <!--
     <tr>
         <td class="policy-header"><b>Final grade</b></td>
         <td class="policy-spacer"></td>
@@ -173,6 +204,7 @@ This is a graduate course primarily for graduate students. <br><br>
                 performance
                 relative to your classmates.</b></td>
     </tr>
+    -->
 
 
 </table>
