--- a/spring2023/index.html
+++ b/spring2023/index.html
@@ -79,7 +79,7 @@ This is a graduate course primarily for graduate students. Students should taken
 <table class="rules-table">
 
     <tr>
-        <td class="policy-header"><b>Score Assignment</b></td>
+        <td class="policy-header"><b>Grading</b></td>
         <td class="policy-spacer">&nbsp;&nbsp;&nbsp;&nbsp;</td>
         <td>
             Grading will be based on bi-weekly reading assignments (50%) and a course project
