--- a/spring2023/index.html
+++ b/spring2023/index.html
@@ -183,7 +183,7 @@ This is a graduate course primarily for graduate students. Students should taken
                 </li>
                 <li>
                   Topic ideas will be provided, but you can suggest your own (if suitable).
-                  The project should contain some level of autonomous system.
+                  The project should contain some level of autonomous AI component.
                   Could be done in simulator or in real-world.
                 </li>
                 <li>The project is worth 45% of your grade. These points are
