--- a/spring2023/lecs.html
+++ b/spring2023/lecs.html
@@ -29,7 +29,7 @@
 <td width="20%" align="center">
 <a href= "index.html"><b>Home</b></a></td>
 <td width="20%" align="center">
-<a href= "lecs.html"><b>Syllabus</b></a></td>
+<a href= "lecs.html"><b>Schedule</b></a></td>
 </tr>
 </table>
 </td>
