--- a/spring2023/index.html
+++ b/spring2023/index.html
@@ -64,7 +64,7 @@ This course aims to provide students with key principles and algorithms to build
 <b>Target Audience/ Prerequisites:</b>
 </td>
 <td align="justify">
-This is a graduate course primarily for graduate students. Students should taken AIAA 5032 or equivalent AI principle courses. <br><br>
+This is a graduate course primarily for graduate students. <br><br>
 </td>
 </tr>
 
