--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="7; url='spring2023/index.html'" />
+    <meta http-equiv="refresh" content="7; url='spring2024/index.html'" />
   </head>
   <body>
     <ul>
       <li>
         <p> <a href="spring2023/index.html">Spring 2023</a></p>
+      </li>
+      <li>
+        <p> <a href="spring2024/index.html">Spring 2024</a></p>
       </li>
     </ul>
 
