--- a/spring2024/index.html
+++ b/spring2024/index.html
@@ -43,6 +43,7 @@
 <b>Date and Time: </b> 01:30PM - 04:20PM, Friday<br>
 <b>Location: </b> Rm 201, E1<br>
 <b>Websites: </b><a href="https://hkust-gz.instructure.com/courses/596">Canvas</a> <br>
+<b>Zoom:</b> 628-334-1826 PW: 12345 (In-person expected) <br>
 </td>
 </tr>
 <tr>
@@ -241,7 +242,7 @@ This is a graduate course primarily for graduate students. <br><br>
   </td>
   <td valign="top">
   <br>
-  <b> Jinhui YE, Yunfan LU, Sheng WANG </b> <br>
+  <b> Jinhui YE, Yunfan LU, Sheng WANG, Yunlei MEN </b> <br>
   </td>
   <td valign="top">
   </td>
