updated course title

--- a/spring2024/index.html
+++ b/spring2024/index.html
@@ -9,7 +9,7 @@
 <table id="maintbl">
 <tr>
 <td width="80%">
-  <h1 align="left"> <br><b> Autonomous AI</b> </h1>
+  <h1 align="left"> <br><b> Autonomous AI (will be renamed Embodied AI)</b> </h1>
   <h2> AIAA 5036, Spring 2024 </h2>
   <h2 align="left">Instructors: <a href="https://junweiliang.me/">Junwei Liang</a>
   </h2>
