updated TA emails

--- a/spring2024/index.html
+++ b/spring2024/index.html
@@ -242,7 +242,11 @@ This is a graduate course primarily for graduate students. <br><br>
   </td>
   <td valign="top">
   <br>
-  <b> Jinhui YE, Yunfan LU, Sheng WANG, Yunlei MEN </b> <br>
+  <b> Jinhui YE, Yunfan LU, Sheng WANG, Yunlei MEN </b> <br/>
+  jye624@connect.hkust-gz.edu.cn<br/>
+  ylu066@connect.hkust-gz.edu.cn<br/>
+  swangei@connect.hkust-gz.edu.cn<br/>
+  ymen989@connect.hkust-gz.edu.cn<br/>
   </td>
   <td valign="top">
   </td>
